# strandsagents

./: .env_example  DESIGN.md  README.md  advanced_research.py  agent.py  all_imports.txt  assistants_directory.py  browser_assistant.py  chunking_assistant.py  code-assistant.prompt  context7_info.py  create_requirements.py  data-assistant.prompt  debug_browser.py  demo_greeter.py  dynamic_demo_greeter.py  embed_test_ollama.py  example_usage.py  extract_imports.py  file_assistant.py  filtered_imports.txt  financial_assistant.py  fix-venv.ps1  garbage_cleanup.py  graph_example.py  hello_test.py  install-all-packages.txt  installed-packages.txt  interleaved_reasoning.py  knowledge_base.txt  knowledgebase.txt  logging_config.py  main.py  mcp.json  memory_assistant.py  meta_tool_assistant.py  no_tools.py  output.txt  process_imports.py  quick-fix-venv.ps1  (+24 more)
Example_code_assistant/: README.md  code_assistant.py  main.py  models.py  pyproject.toml
ai_agents/: check_result.py  main.py  test_strands_basic.py
assistants/: advanced_research.py  aws_cost_assistant.py  code-template.prompt  embedding_assistant.py  eval_validate.py  memory_assistant.py  meta_assistant_example.py  meta_tool_assistant.py  reasoning-code.prompt  research_assistant.py  run_graph.py  run_swarm.py
code-assistant/: IMPLEMENTATION_PLAN.md  README.md  __init__.py  (+31 more)
websearch/: Dockerfile  START.md  pyproject.toml  start.ps1  start.sh
websearch/scraper/: items.py  ollama_rerank.py  pipelines.py  settings.py
websearch/scraper/spiders/: focused_search_spider.py  site_crawl_spider.py  site_sitemap_spider.py
(+130 files in other folders)
