[project]
name = "webscraper"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "scrapy==2.13.3",
  "scrapy-playwright==0.0.31",
  "playwright==1.47.2",
  "lxml==5.2.2",
  "readability-lxml==0.8.1",
  "sqlite-utils==3.37",
  "httpx==0.27.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
